.run.log
  File ".last_tmp.py", line 32
    if pn => c.num:
          ^
SyntaxError: invalid syntax

